Creado mediante Colaboratory

--- a/IntroducciónColab.ipynb
+++ b/IntroducciónColab.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1wjJBOu4UmBH5zSskHMcLeDsD5PLU9mPd",
-      "authorship_tag": "ABX9TyPzezf8wmjOMlN57cmZnxi3",
+      "authorship_tag": "ABX9TyMPa2cCEFX4IIivJS+0QOVY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,16 +29,16 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "5n3IVl47dA-W",
+        "outputId": "faada985-8bfb-4dbe-d971-761c33bc29e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "wO7uOSPZy8gp",
-        "outputId": "9a6f0daa-2f9e-4c9b-ac8a-b2ce6de2252f"
+        }
       },
       "source": [
         "2+2"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -51,6 +51,29 @@
             "tags": []
           },
           "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RwAqKp6QdHWp",
+        "outputId": "578e91e6-d170-465a-ae18-c237331f4afb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(3+3)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
