Creado mediante Colaboratory

--- a/IntroducciónColab.ipynb
+++ b/IntroducciónColab.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1wjJBOu4UmBH5zSskHMcLeDsD5PLU9mPd",
-      "authorship_tag": "ABX9TyPl7LDULhdJ4yLYL6qAMcBF",
+      "authorship_tag": "ABX9TyONIkc2uTXcWPPqXYmC1uVP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,8 +32,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "wO7uOSPZy8gp",
-        "outputId": "b2f66bb4-20fe-410a-eb8d-b40763b6e1ab"
+        "id": "5n3IVl47dA-W",
+        "outputId": "faada985-8bfb-4dbe-d971-761c33bc29e4"
       },
       "source": [
         "2+2"
@@ -57,23 +57,107 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wTtoHXPleO7E",
-        "outputId": "8848a80e-e7e1-4344-9c3c-51bcbe01b359",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RwAqKp6QdHWp",
+        "outputId": "578e91e6-d170-465a-ae18-c237331f4afb"
       },
       "source": [
-        "print(10+10)"
+        "print(3+3)"
       ],
       "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "20\n"
+            "6\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P9sb4sR2f1vd"
+      },
+      "source": [
+        "import numpy as np"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-Swf_Y2kf5lb",
+        "outputId": "eefd3eb8-2f18-42cd-9e74-1ce7f9cb48e6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "np.abs(-100.345)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "100.345"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BW2Z-CFEgJnm"
+      },
+      "source": [
+        "def abs(x):\r\n",
+        "  if(type(x) != float and type(x) != int ):\r\n",
+        "    return \"Error\"\r\n",
+        "  if(x<0):\r\n",
+        "    return -x\r\n",
+        "  else:\r\n",
+        "    return x"
+      ],
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qqt91J8kgWpv",
+        "outputId": "2b6fd240-decd-41fe-9c82-5af2656a2bfb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "np.abs(3)"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
         }
       ]
     }
