--- a/Math2CondorClase01.ipynb
+++ b/Math2CondorClase01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Math2CondorClase01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMLtAOpmho5lDDuWqkhopfA",
+      "authorship_tag": "ABX9TyP15C98cGbUglkcVEr69K2E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,6 +72,29 @@
             "tags": []
           },
           "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FwnxjtOdkS_Z",
+        "outputId": "05876daf-24de-42f5-f155-e2699a91607f"
+      },
+      "source": [
+        "print(\"Prueba\")"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Prueba\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
