Creado mediante Colaboratory

--- a/Math2CondorClase01.ipynb
+++ b/Math2CondorClase01.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Math2CondorClase01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP15C98cGbUglkcVEr69K2E",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOy8IdccdEdhxWA/enIRRap",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,26 +26,69 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "se8fz9QGidCR",
-        "outputId": "fd8b27f6-8cd8-4602-ce82-1109e915174d"
+        "id": "rgj9Ug61lRyd"
       },
       "source": [
-        "print(\"Hola Mundo\")"
+        "># **Curso de Math 2 Condor**\r\n",
+        "\r\n",
+        "$y = x^2 $\r\n",
+        "\r\n",
+        "Este es un notebook para las clases de Math2 con Matrices "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1l3UsO4cllSZ"
+      },
+      "source": [
+        "a = 4+5\r\n"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ho0Z1-simTB0"
+      },
+      "source": [
+        "b= 4+2"
       ],
       "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Hola Mundo\n"
-          ],
-          "name": "stdout"
-        }
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PSOhbTTdmS-V"
+      },
+      "source": [
+        "c = 2+b"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "02sdGWZ5mStX"
+      },
+      "source": [
+        "d = c+10"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JsOKBqrJnA6x"
+      },
+      "source": [
+        ">> # Ciclo For"
       ]
     },
     {
@@ -53,48 +97,177 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ptaHzjwFjRir",
-        "outputId": "5dd07478-bed5-4828-dc7a-dbb9a5baa46d"
+        "id": "5lp-AZALnF3_",
+        "outputId": "a65c10d5-62dd-4a2b-982c-478d43e69808"
       },
       "source": [
-        "2*2"
+        "a=0\r\n",
+        "for i in range(5):\r\n",
+        "  a= a+i\r\n",
+        "print(a)"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hbh8cvfWn98D"
+      },
+      "source": [
+        "def suma(b):\r\n",
+        "  a=0\r\n",
+        "  for i in range(b+1):\r\n",
+        "    a= a+i\r\n",
+        "  return print(a)\r\n"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PXQrwhfjoTiM",
+        "outputId": "1b2a7d46-0c03-4b64-d2a3-f4300b18d525"
+      },
+      "source": [
+        "suma(4)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qFl-9FzTnUFw"
+      },
+      "source": [
+        "# If"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gJXthJo2plIz"
+      },
+      "source": [
+        "def suma_filtro(b):\r\n",
+        "  if(type(b) == int):\r\n",
+        "    a=0\r\n",
+        "    for i in range(b+1):\r\n",
+        "      a= a+i\r\n",
+        "    return print(a)\r\n",
+        "  else:\r\n",
+        "    return print(\"Introduce una variable tipo int\")"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8mxUn_F7qWS1"
+      },
+      "source": [
+        "Operadores Lógicos\r\n",
+        "\r\n",
+        "== \r\n",
+        "&& and\r\n",
+        "|| or\r\n",
+        "!= \r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f0SY8OzEp5cW",
+        "outputId": "e9aae895-2079-4eb0-bd2c-2917b44bff73"
+      },
+      "source": [
+        "suma_filtro(4)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hA4YMlKEsbIZ"
+      },
+      "source": [
+        "> # **Matrices** "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rOOENj47sk7s"
+      },
+      "source": [
+        "import numpy as np"
+      ],
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tzsMsY2hstmi",
+        "outputId": "2ca28457-cd63-4b3b-bbbb-831da6537b8d"
+      },
+      "source": [
+        "matriz01 = np.array([[1,2,3,4],[5,6,7,8]])\r\n",
+        "matriz02 = np.array([[1,0,0,0],[0,0,0,0]])\r\n",
+        "matriz03 = matriz01 + matriz02\r\n",
+        "matriz03"
+      ],
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "4"
+              "array([[2, 2, 3, 4],\n",
+              "       [5, 6, 7, 8]])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FwnxjtOdkS_Z",
-        "outputId": "05876daf-24de-42f5-f155-e2699a91607f"
-      },
-      "source": [
-        "print(\"Prueba\")"
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Prueba\n"
-          ],
-          "name": "stdout"
+          "execution_count": 31
         }
       ]
     }
